css/styles.css
/* ... */
.btn-warning:hover,
.btn-warning.focus{
  background-color: #ec971f !important;
  border-color: #d58512 !important;
}
.btn-warning:active,
.btn-warning.active{
  background-image: none !important;
  background-color: #f0ad4e !important;
  border-color: #eea236 !important;
}
.btn-warning.disabled,
.btn-warning[disabled],
fieldset[disabled] ..btn-warning{
  background-color: #f0ad4e !important;
  border-color: #eea236 !important;
}
.btn-default {
  color: #333 !important;
  background-color: #fff !important;
  border-color: #ccc !important;
}
.btn-default:hover,
.btn-default.focus {
  background-color: #e6e6e6 !important;
  border-color: #adadad !important;
}
.btn-default:active,
.btn-default.active{
  background-image: none !important;
  background-color: #fff !important;
  border-color: #ccc !important;
}
.btn-default.disabled,
.btn-default[disabled],
fieldset[disabled] .btn-default{
  background-color: #fff !important;
  border-color: #ccc !important;
}
.spin-icon {
    -webkit-animation: spin 1500ms infinite linear;
    animation: spin 1500ms infinite linear;
}
@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(359deg);
        transform: rotate(359deg);
    }
}
@keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(359deg);
        transform: rotate(359deg);
    }
}
.l,
.l>p{
  font-size:16px;
  line-height:1.42857143;
}
.nm{
  margin-bottom: 0;
}
.projectlist{

}
.project>h2{
  margin-bottom:0;
}
.project{
  margin-bottom:25px;
  padding-bottom: 20px;
  border-bottom: 1px dashed #666;
}


.projectlist>.project:last-of-type{
  margin-bottom:0;
  border-bottom: none;
}
.project>div>p{
  font-size:16px;
  margin: 12px 0;
}
.projecticon{
  font-size: 20px;
  position:relative;
  top:2px;
  justify-content: center;
  display: inline-flex;
}
x-alert > button{
  background: none;
  border:none;
  width: 10px;
  height: 10px;
  padding: 0;
  position: absolute;
  top: Calc(50% - 5px);
  left:8px;
  line-height: 10px;
}
x-alert > button:after{
  font-family: 'icomoon';
  content: "\ea0f";
  font-size: 7px;
  line-height: 10px;
  color: #fff;
}
x-alert{
  padding: 12px 15px 10px 25px;
  background: #666;
  border-radius: 5px;
  border: 0.5px solid #888;
  color: #fff;
  min-width: 250px;
  z-index: 99999 !important;
  position: relative;
  display: block;
  margin: 5px;    
  opacity: 1;
  -webkit-transition: all 1.5s ease-in-out, opacity 400ms linear;
  -moz-transition: all 1.5s ease-in-out, opacity 400ms linear;
  -o-transition: all 1.5s ease-in-out, opacity 400ms linear;
  -ms-transition: all 1.5s ease-in-out, opacity 400ms linear;
  transition: all 1.5s ease-in-out, opacity 400ms linear;
  
  overflow:hidden;
}
x-alert > span{
  display:block;
}
x-alert>span>div{
  margin-top: 8px;
  border-radius: 9px;
  height: 7px;
  border: 1px solid #222;
  width: 100%;
  box-sizing: border-box;
  background: #fff;
  padding: 1px;
}
x-alert>span>div>div{
  height: 100%;
  border-radius: 9px;
  width: 100%;
  box-sizing: border-box;
  background: #222;
  margin-left: auto;

    /*transition:width 5.1s ease-in-out;
  -moz-transition:width 5.1s ease-in-out;
  -webkit-transition:width 5.1s ease-in-out;
  -o-transition:width 5.1s ease-in-out;*/
}
.alertcontainer{
  position: fixed;
  right: 15px;
  bottom: 15px;
  display: inline-block;
  z-index: 99999 !important;
  -webkit-transition: all 1.5s ease-in-out, opacity 200ms linear;
  -moz-transition: all 1.5s ease-in-out, opacity 200ms linear;
  -o-transition: all 1.5s ease-in-out, opacity 200ms linear;
  -ms-transition: all 1.5s ease-in-out, opacity 200ms linear;
  transition: all 1.5s ease-in-out, opacity 200ms linear;
}
.coverpage{
   display: flex;
}
.cover-container{
  box-shadow: inset 0 0 100px 10px rgba(25,25,25,.5);
  width:100%;
  padding:0;
  margin: 52px 0 50px 0;
  min-height:100%;
  display:flex;
  align-items: center;
  justify-content: center;
}
.cover-container>.box{
  max-width:40%;
}
.covertag{
  font-size: 36px;
  line-height: 1.1;
  margin-top: 20px;
  margin-bottom: 10px;
}
.coverside{
  font-size: 21px;
}
.coverbutton>a{
  padding: 10px 20px;
  margin: 5px;
  color: var(--primary-background-color);
  background: var(--primary-color);
  font-size: 16px;
  font-weight: bold;
}
.filterbar{
  padding: 9px 15px;
  border: 1px solid #222;
  max-width: 80%;
  margin: 0 auto;
  background: #222230;
  border-radius: 7px;
}
.filterbar span:first-of-type{
	margin-right:auto;
}
/* ... */

